--- a/Dockerfile.arch
+++ b/Dockerfile.arch
@@ -9,9 +9,9 @@ USER sirenityk
 WORKDIR /home/sirenityk
 COPY . dotfiles
 RUN bash dotfiles/run.sh
+RUN zsh -ic 'source ~/.local/share/zinit/plugins/romkatv---powerlevel10k/gitstatus/install'
 RUN git clone https://aur.archlinux.org/yay-bin yay --depth 1
 RUN cd yay && makepkg -si --noconfirm
-RUN zsh -ic 'source .local/share/zinit/plugins/romkatv---powerlevel10k/gitstatus/install'
 RUN sudo rm -fr dotfiles yay
 RUN yay -Rscnu --noconfirm $(yay -Qdtq); exit 0
 RUN yes | yay -Scc
